--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
 
 [dependencies]
 object-chain = "0.1"
+heapless = "0.6"
 
 [dev-dependencies]
 backend-embedded-graphics = {path = "backend-embedded-graphics"}
