--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ heapless = "0.6"
 
 [dev-dependencies]
 backend-embedded-graphics = {path = "backend-embedded-graphics"}
-embedded-graphics = "0.7.0-alpha.3"
+embedded-graphics = "=0.7.0-alpha.3"
 embedded-graphics-simulator = "0.3.0-alpha.2"
