--- a/backend-embedded-graphics/Cargo.toml
+++ b/backend-embedded-graphics/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Dániel Buga <bugadani@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-embedded-graphics = "=0.7.0-alpha.3"
+embedded-graphics = "0.7.0-beta.1"
 embedded-gui = { path = ".." }
 heapless = "0.6"
