--- a/backend-embedded-graphics/Cargo.toml
+++ b/backend-embedded-graphics/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2018"
 embedded-graphics = "0.7.0-beta.1"
 embedded-text = { git = "https://github.com/embedded-graphics/embedded-text" }
 embedded-gui = { path = ".." }
+
+[features]
+ansi = ["embedded-text/ansi"]
+default = ["ansi"]
