--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ object-chain = "0.1"
 [dev-dependencies]
 heapless = "0.7"
 backend-embedded-graphics = {path = "backend-embedded-graphics"}
-embedded-graphics = "0.7.0-beta.1"
-embedded-graphics-simulator = "0.3.0-alpha.2"
+embedded-graphics = "0.7.0-beta.2"
+embedded-graphics-simulator = "0.3.0-beta.2"
