--- a/backend-embedded-graphics/Cargo.toml
+++ b/backend-embedded-graphics/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Dániel Buga <bugadani@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-embedded-graphics = "0.7.0-beta.1"
-embedded-text = { git = "https://github.com/embedded-graphics/embedded-text" }
+embedded-graphics = "0.7.0-beta.2"
+embedded-text = "0.5.0-beta.1"
 embedded-gui = { path = ".." }
 
 [features]
