--- a/backend-embedded-graphics/Cargo.toml
+++ b/backend-embedded-graphics/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 embedded-graphics = "0.7.0"
 embedded-text = { version = "0.5.0-beta.3", features = ["plugin"] }
 embedded-gui = { path = ".." }
+heapless = "0.7"
+az = "1.1"
 
 [features]
 ansi = ["embedded-text/ansi"]
