--- a/backend-embedded-graphics/Cargo.toml
+++ b/backend-embedded-graphics/Cargo.toml
@@ -10,6 +10,7 @@ embedded-text = { version = "0.5.0-beta.3", features = ["plugin"] }
 embedded-gui = { path = ".." }
 heapless = "0.7"
 az = "1.1"
+object-chain = "0.1"
 
 [features]
 ansi = ["embedded-text/ansi"]
