--- a/backend-embedded-graphics/Cargo.toml
+++ b/backend-embedded-graphics/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2018"
 
 [dependencies]
 embedded-graphics = "0.7.0"
-embedded-text = { version = "0.5.0-beta.3", features = ["plugin"] }
+# embedded-text = { version = "0.5.0-beta.3", features = ["plugin"] }
+embedded-text = { git = "https://github.com/embedded-graphics/embedded-text", branch = "master", features = ["plugin"] }
 embedded-gui = { path = ".." }
 heapless = "0.7"
 az = "1.1"
