--- a/backend-embedded-graphics/Cargo.toml
+++ b/backend-embedded-graphics/Cargo.toml
@@ -11,6 +11,7 @@ embedded-gui = { path = ".." }
 heapless = "0.7"
 az = "1.1"
 object-chain = "0.1"
+paste = "1.0.5"
 
 [features]
 ansi = ["embedded-text/ansi"]
