--- a/backend-embedded-graphics/Cargo.toml
+++ b/backend-embedded-graphics/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 embedded-graphics = "0.7.0"
-embedded-text = { version = "0.5.0-beta.4", features = ["plugin"] }
+embedded-text = { version = "0.5.0", features = ["plugin"] }
 embedded-gui = { path = ".." }
 heapless = "0.7"
 az = "1.1"
